--- a/agency.html
+++ b/agency.html
@@ -57,7 +57,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img src="assets/img/logo.png" class="img-responsive" alt="">
+                    <img src="assets/img/logo2.png" class="img-responsive" alt="">
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -106,7 +106,7 @@
                     <div class="about-content">
                         <i class="fa fa-eye fa-4x"></i>
                         <h3>Explore</h3>
-                        <p>We help you discover new bars, restaurants, night life, and other experiences. Stop doing going to the same places!</p>
+                        <p>We help you discover new bars, restaurants, night life, and other experiences. Stop going to the same places!</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".4s">
