added our profiles and decreased size of footer

--- a/agency.html
+++ b/agency.html
@@ -79,9 +79,10 @@
     </nav>
     <header style="background-image: url('assets/img/city.jpg');">
         <div class="intro-content">
-            <img src="assets/img/bubbles.png" class="img-responsive img-centered" alt="">
+            <a class="page-scroll" href="#pricing"><img src="assets/img/bubbles.png" class="img-responsive img-centered" alt="bubble"></a>
             <div class="brand-name">Been There Done That</div>
             <hr class="colored">
+            <h3>You can click the bubble to get started!</h3>
             <div class="brand-name-subtext"></div>
         </div>
         <div class="scroll-down">
@@ -125,6 +126,85 @@
                         <h3>Unique User Login</h3>
                         <p>Keep track of the places you have been.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bg-gray">
+        <div class="container text-center wow fadeIn">
+            <div class="row">       
+                <div class="col-lg-12">
+                    <h2>Our Team</h2>
+                    <p>We are the group of developers who created Been There Done That.</p>
+                    <hr class="colored">
+                </div>
+            </div>
+            <div class="row content-row">
+                <div class="col-lg-12">
+                        <div class="col-lg-3">
+                            <img src="assets/img/davon.jpg" class="img-responsive" alt="">
+                            <div class="caption">
+                                <h3>Davon Jackson</h3>
+                                <hr class="colored">
+                                <p>Full Stack Developer</p>
+                                <ul class="list-inline social">
+                                    <li>
+                                        <a href="https://github.com/Djacks44" target="_blank"><i class="fa fa-github fa-fw"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/in/davon-jackson-491b12100" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <img src="assets/img/angel.jpg" class="img-responsive" alt="">
+                            <div class="caption">
+                                <h3>Angel Trinh</h3>
+                                <hr class="colored">
+                                <p>Full Stack Developer</p>
+                                <ul class="list-inline social">
+                                    <li>
+                                        <a href="https://github.com/angelica3010" target="_blank"><i class="fa fa-github fa-fw"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/in/angeltrinh" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <img src="assets/img/mariam.jpg" class="img-responsive" alt="">
+                            <div class="caption">
+                                <h3>Mariam Sallam</h3>
+                                <hr class="colored">
+                                <p>Full Stack Developer</p>
+                                <ul class="list-inline social">
+                                    <li>
+                                        <a href="https://github.com/msallam227" target="_blank"><i class="fa fa-github fa-fw"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/in/mariam-sallam-136b11102?authType=name&authToken=d8Ci&trk=contacts-contacts-list-contact_name-0" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <img src="assets/img/john.jpg" class="img-responsive" alt="">
+                            <div class="caption">
+                                <h3>John Serencses</h3>
+                                <hr class="colored">
+                                <p>Full Stack Developer</p>
+                                <ul class="list-inline social">
+                                    <li>
+                                        <a href="https://github.com/johnnyluck87" target="_blank"><i class="fa fa-github fa-fw"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/in/john-serencses-476070114" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
@@ -279,18 +359,6 @@
                     <h4><i class="fa fa-envelope"></i> Email</h4>
                     <p><a href="mailto:mail@example.com">BeenThereDoneThatRCB@Gmail.com</a>
                     </p>
-                </div>
-            </div>
-            <div class="row social">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li><a href="www.facebook.com"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
-                        </li>
-                        <li><a href="www.twitter.com"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
-                        </li>
-                        <li><a href="www.linkedin.com"><i class="fa fa-linkedin fa-fw fa-2x"></i></a>
-                        </li>
-                    </ul>
                 </div>
             </div>
             <div class="row copyright">
